src/styles/index.module.css
.main{
	height: 100vh;

	overflow-y: scroll;
}
.container{
	width: 1000px;
	max-width: 100%;

	margin: auto;
}

.indexList{
	width: 100%;

	padding: 0;
	margin: 0;

	border-radius: 3px;
	margin-bottom: 30px;
}
.legend{
	padding: 0;
	margin: 2rem 0 1rem;
	list-style: none;

	display: flex;
	flex-direction: row;
	justify-content: space-around;
}
.legendKey{
	display: block;
	text-align: center;
	font-weight: bold;
}
.legendDesc{
	display: block;
	text-align: center;
	font-weight: lighter;
	font-size: .8rem;
}
.headings{
	font-size: 1rem;
	font-weight: bold;
}
.headings .number,
.headings .volume{
	font-family: inherit;
}
.listItem{
	padding: .7rem 1rem;
	display: grid;
	justify-items: start;
	align-items: center;
	grid-template-rows:3rem;
	grid-template-columns: 3fr 2fr .8fr .6fr .6fr .6fr;
	grid-template-areas: 
		"name author number volume pdf youtube"
	;
	column-gap: 10px;

	background: #dfdfdf;
	margin: 0;
}
.listItem:nth-child(even){
	background: #eee;
}
.name{
	margin: 0;
	grid-area: name;
}
.author{
	grid-area: author;
}
.number{
	grid-area: number;
}
.volume{
	grid-area: volume;
}
.pdf{
	grid-area: pdf;
}
.youtube{
	grid-area: youtube;
}
.volume,
.number,
.pdf,
.youtube{
	display: flex;
	align-items: center;

	width: 100%;
	text-align: center;
}
.pdf a,
.youtube a{
	display: flex;
	align-items: center;
}

.image{
	width: 50px;
	max-width: 100%;
}
.cell{
	margin: 0;
	padding: 0;
}
.sortable{
	cursor: pointer;
	text-decoration: underline;
}
.chevron{
	width: 18px;
	height: 18px;

	vertical-align: middle;
	margin-left: 3px;
	display: none;
}
.sortableActive .chevron{
	display: inline-block;
}
.sortableActive.asc .chevron{
	transform: rotate(0deg);
}
.sortableActive.desc .chevron{
	transform: rotate(180deg);
}

@media only screen and (max-width: 600px){
	.listItem{
		position: relative;

		display: flex;
		flex-direction: row;
		flex-wrap: wrap;
	}

	.headings{
		display: flex;
		justify-content: space-evenly;
		justify-items: center;
		background: #bdbdbd
	}
	.headings span{
		display: none;
		font-size: 1.1rem;
		font-weight: bold;
		color: #000;
		margin: 0 .5rem;
	}
	.headings .name,
	.headings .author,
	.headings .number{
		display: inline-block;
		max-width: 110px;
	}


	.name{ 
		font-size: 1rem;
		font-weight: bold;
		width: 100%;
	}
	.author{
		font-size: .8rem;
		color: #555;
		width: 100%;
	}
	.volume,
	.number,
	.pdf,
	.youtube{
		margin-top: .4rem;
		width: 2rem;
		font-size: .8rem;
		font-weight: lighter;
		color: #555;

		align-self: end;
	}

	.volume{
		margin-left: 15%;
	}
	.pdf{
		top: 20%;
		margin-left: auto;
		margin-right: 1rem;
		position: absolute;

		right: 80px;
	}
	.youtube{
		top: 25%;
		margin-right: 1rem;
		position: absolute;

		right: 10px;
	}
}

